--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -9,8 +9,8 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="courses">Courses</a>
@@ -28,7 +28,7 @@
                             <a class="nav-link" href="logout">Logout</a>
                         </li>
                         <li>
-                            <a id="usern" class="nav-link" href="#">
+                            <a class="nav-link text-muted text-decoration-none" href="#">
                                 <%=currentUser.username%>
                             </a>
                         </li>
