--- a/public/courses.css
+++ b/public/courses.css
@@ -1,6 +1,14 @@
 body{
     width: 100%;
     margin-bottom: 0px;
+    background-image: url("https://images.unsplash.com/photo-1582738411706-bfc8e691d1c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8d2hpdGUlMjBncmFkaWVudHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h1{
+    text-align: center;
+    margin-top: 1rem;;
 }
 
 nav{
@@ -41,6 +49,21 @@ a:hover{
 form .card {
     margin: 20px;
     padding: 10px;
+    background: transparent;
+    transition: 300ms;
+}
+
+form .card:hover{
+    border: 3px solid rgba(0, 0, 255, .2);
+}
+
+form .card ul li{
+    background: transparent;
+    border:none;
+}
+form .card ul li:hover{
+    background: transparent;
+    border:none;
 }
 
 form img:hover {
@@ -49,10 +72,39 @@ form img:hover {
     transition: ease-out 0.1s;
 }
 
-form .card-title:hover {
-    text-decoration: underline;
+.card-title{
+     padding-bottom: 0.7rem;
+     min-height: 4rem;
+     margin-top: 0.7rem;
+     border-bottom: 1px solid grey;
+ }
+
+.card-body{
+    padding-top: 0%;
+}
+.card-text{
+    min-height: 7rem;
 }
 
-.card-text{
-    min-height: 5rem;
+#courseButton{
+    padding-bottom: 0%;
+    margin-top: 1rem;
+}
+
+.btn{
+    background: transparent;
+    color:black;
+    border: 1px solid black;
+}
+.btn:hover{
+    background-color: gray;
+    color:white;
+    text-decoration: none;
+    border: 1px solid black;
+}
+
+.card .card-img-top{
+    width: 100%;
+    height: 13vw;
+    object-fit: cover;
 }
