--- a/public/index.css
+++ b/public/index.css
@@ -83,3 +83,72 @@ form .card {
     margin-left: auto;
     margin-right: auto;
 }
+
+.courses {
+    display: inline-block;
+    max-width: fit-content;
+    margin: none;
+}
+
+form .card {
+    margin: 20px;
+    padding: 10px;
+    background: transparent;
+    transition: 300ms;
+}
+
+form .card:hover{
+    border: 2px solid rgba(0, 0, 255, .2);
+}
+
+form .card ul li{
+    background: transparent;
+    border:none;
+}
+form .card ul li:hover{
+    background: transparent;
+    border:none;
+}
+
+form img:hover {
+    padding: 1px;
+    filter: brightness(90%);
+    transition: ease-out 0.1s;
+}
+
+.card-title{
+    padding-bottom: 0.7rem;
+    min-height: 4rem;
+    margin-top: 0.7rem;
+    border-bottom: 1px solid grey;
+ }
+
+.card-body{
+    padding-top: 0%;
+}
+.card-text{
+    min-height: 7rem;
+}
+
+#courseButton{
+    padding-bottom: 0%;
+    margin-top: 1rem;
+}
+
+.btn{
+    background: transparent;
+    color:black;
+    border: 1px solid black;
+}
+.btn:hover{
+    background-color: gray;
+    color:white;
+    text-decoration: none;
+    border: 1px solid black;
+}
+
+.card .card-img-top{
+    width: 100%;
+    height: 13vw;
+    object-fit: cover;
+}
