--- a/views/addcourse.ejs
+++ b/views/addcourse.ejs
@@ -42,6 +42,10 @@
                         <label for="link">Course link</label>
                         <input type="text" id="link" name="newCourse[link]" required>
                     </div>
+                    <div>
+                        <label for="link">Course Thumbnail</label>
+                        <input type="text" id="image" name="newCourse[image]" required>
+                    </div>
                     <div class="buttons">
                         <button class="btn btn-primary" type="submit">Submit</button>
                         <button class="btn btn-danger" type="reset">Reset</button>
