--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -14,14 +14,13 @@
 <body>
     <%- include('../partials/navbar') %>
         <div>
-            <h1>What To Learn</h1>
+            <h1>Start Learning from the Available Courses Today!</h1>
         </div>
         <% for(let course of courses){ %>
             <div class="courses">
                 <form action="#">
-                    <div class="card" style="width: 18rem;">
-                        <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
-                            class="card-img-top" alt="">
+                    <div class="card" style="width: 17rem;">
+                        <img src="<%= course.image %> " class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">
                                 <%= course.title %>
@@ -30,7 +29,9 @@
                                 <% if (course.description.length> 100) {%>
                                     <%course.description=course.description.substring(0, 100) + "..." ;%>
                                         <%= course.description %>
-                                            <%}%>
+                                            <%}else{%>
+                                                <%= course.description %>
+                                                    <% } %>
                             </p>
                         </div>
                         <ul class="list-group list-group-flush">
@@ -38,7 +39,7 @@
                                 Duration <%= course.duration %>
                             </li>
                         </ul>
-                        <div class="card-body">
+                        <div id="courseButton" class="card-body">
                             <a href="/courses/<%=course.id%>" class="btn btn-primary">View Course</a>
                         </div>
                     </div>
