--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,88 +51,47 @@
         </div>
         <div class="container" id="allCourses">
             <div class="row">
-                <div class="col">
-                    <form action="#">
-                        <div class="card" style="width: 18rem;">
-                            <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
-                                class="card-img-top" alt="">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Demo
-                                </h5>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, qui nulla
-                                    exercitationem dolorum sunt accusamus alias id cum vero veritatis libero modi
-                                    molestias nisi mollitia aliquid iste assumenda, quaerat reprehenderit.
-                                </p>
+                <% let i=0 %>
+                    <% for(let course of courses){ %>
+                        <% i++ %>
+                            <div class="col">
+                                <div class="courses">
+                                    <form action="#">
+                                        <div class="card" style="width: 17rem;">
+                                            <img src="<%= course.image %> " class="card-img-top" alt="">
+                                            <div class="card-body">
+                                                <h5 class="card-title">
+                                                    <%= course.title %>
+                                                </h5>
+                                                <p class="card-text">
+                                                    <% if (course.description.length> 100) {%>
+                                                        <%course.description=course.description.substring(0, 100)
+                                                            + "..." ;%>
+                                                            <%= course.description %>
+                                                                <%}else{%>
+                                                                    <%= course.description %>
+                                                                        <% } %>
+                                                </p>
+                                            </div>
+                                            <ul class="list-group list-group-flush">
+                                                <li class="list-group-item">
+                                                    Duration <%= course.duration %>
+                                                </li>
+                                            </ul>
+                                            <div id="courseButton" class="card-body">
+                                                <a href="/courses/<%=course.id%>" class="btn btn-primary">View
+                                                    Course</a>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Duration 15hrs
-                                </li>
-                            </ul>
-                            <div class="card-body">
-                                <a href="#" class="btn btn-primary">View Course</a>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col">
-                    <form action="#">
-                        <div class="card" style="width: 18rem;">
-                            <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
-                                class="card-img-top" alt="">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Demo
-                                </h5>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, qui nulla
-                                    exercitationem dolorum sunt accusamus alias id cum vero veritatis libero modi
-                                    molestias nisi mollitia aliquid iste assumenda, quaerat reprehenderit.
-                                </p>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Duration 15hrs
-                                </li>
-                            </ul>
-                            <div class="card-body">
-                                <a href="#" class="btn btn-primary">View Course</a>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col">
-                    <form action="#">
-                        <div class="card" style="width: 18rem;">
-                            <img src="https://images.unsplash.com/photo-1641038624074-25a1e8fabfc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8Ym84alFLVGFFMFl8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60"
-                                class="card-img-top" alt="">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Demo
-                                </h5>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, qui nulla
-                                    exercitationem dolorum sunt accusamus alias id cum vero veritatis libero modi
-                                    molestias nisi mollitia aliquid iste assumenda, quaerat reprehenderit.
-                                </p>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Duration 15hrs
-                                </li>
-                            </ul>
-                            <div class="card-body">
-                                <a href="#" class="btn btn-primary">View Course</a>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                            <% if(i==3){break;} %>
+                                <% } %>
             </div>
         </div>
 
-        <footer class="footer sticky-bottom">
+        <footer class="footer sticky-bottom bg-dark">
             <p>&copy;Elearn 2022</p>
         </footer>
 
