--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -1,44 +1,62 @@
-<%- include('./flash') %>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">ELearn</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
-                aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+<!DOCTYPE html>
+<html lang="en">
 
-            <div class="collapse navbar-collapse" id="navbarToggler">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="courses">Courses</a>
-                    </li>
-                    <% if(!currentUser) {%>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public/navbar.css">
+    <title>Navbar</title>
+</head>
+
+<body>
+    <%- include('./flash') %>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">ELearn</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+                    aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarToggler">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="signin" style="margin-left: 65vw;">Sign In</a>
+                            <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="register" style="margin-right: 0.5vw;">Register</a>
+                            <a class="nav-link" href="courses">Courses</a>
                         </li>
 
-                        <% } else{ %>
-                            <img src="https://cdn1.iconfinder.com/data/icons/circle-outlines-colored/512/User_Account_Avatar_Person_Profile_Login_Human-512.png"
-                                 alt="Avatar" class="avatar" style="margin-left: 66vw;vertical-align: middle;width: 40px;height: 40px;border-radius: 50%;">
-                            <li class="nav-item dropdown" style="margin-right: 0.5vw;">
-                                <a class="nav-link dropdown-toggle" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <%=currentUser.username%>
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                                    <li>
-                                        <a class="dropdown-item" href="logout">Logout</a>
-                                    </li>
-                                </ul>
+                        <% if(!currentUser) {%>
+                            <li class="nav-item">
+                                <a class="nav-link" href="signin">Sign In</a>
                             </li>
-                            
-                            <% } %>
-                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="register">Register</a>
+                            </li>
+
+                            <% } else{ %>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle text-decoration-none"
+                                        id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+
+                                        <span>&#128100;</span>
+                                        <%=currentUser.username%>
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                                        <li>
+                                            <a class="dropdown-item" href="logout">Logout</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <% } %>
+
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+</body>
+
+</html>
